--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,13 +35,17 @@ dist.jlink.output=${dist.jlink.dir}/ResortManagementSystem
 excludes=
 file.reference.kernel-7.1.3.jar=C:\\Users\\63945\\Downloads\\iText7-Core-7.1.3\\kernel-7.1.3.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\63945\\Downloads\\mysql-connector-java-8.0.28.jar
+file.reference.mysql-connector-java-8.0.28.jar-1=C:\\Users\\Theresa\\Downloads\\mysql-connector-java-8.0.28.jar
 file.reference.rs2xml.jar=C:\\Users\\63945\\Downloads\\rs2xml.jar
+file.reference.rs2xml.jar-1=C:\\Users\\Theresa\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.kernel-7.1.3.jar}
+    ${file.reference.kernel-7.1.3.jar}:\
+    ${file.reference.mysql-connector-java-8.0.28.jar-1}:\
+    ${file.reference.rs2xml.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
