--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ResortManagementSystem
+application.vendor=63945
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,20 +33,17 @@ dist.jar=${dist.dir}/ResortManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ResortManagementSystem
+endorsed.classpath=
 excludes=
 file.reference.kernel-7.1.3.jar=C:\\Users\\63945\\Downloads\\iText7-Core-7.1.3\\kernel-7.1.3.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\63945\\Downloads\\mysql-connector-java-8.0.28.jar
-file.reference.mysql-connector-java-8.0.28.jar-1=C:\\Users\\Theresa\\Downloads\\mysql-connector-java-8.0.28.jar
 file.reference.rs2xml.jar=C:\\Users\\63945\\Downloads\\rs2xml.jar
-file.reference.rs2xml.jar-1=C:\\Users\\Theresa\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.kernel-7.1.3.jar}:\
-    ${file.reference.mysql-connector-java-8.0.28.jar-1}:\
-    ${file.reference.rs2xml.jar-1}
+    ${file.reference.kernel-7.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
