--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,12 +38,14 @@ excludes=
 file.reference.kernel-7.1.3.jar=C:\\Users\\63945\\Downloads\\iText7-Core-7.1.3\\kernel-7.1.3.jar
 file.reference.mysql-connector-java-8.0.28.jar=C:\\Users\\63945\\Downloads\\mysql-connector-java-8.0.28.jar
 file.reference.rs2xml.jar=C:\\Users\\63945\\Downloads\\rs2xml.jar
+file.reference.xchart-3.8.8.jar=C:\\Users\\63945\\Downloads\\xchart-3.8.8\\xchart-3.8.8\\xchart-3.8.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.28.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.kernel-7.1.3.jar}
+    ${file.reference.kernel-7.1.3.jar}:\
+    ${file.reference.xchart-3.8.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
